# lifebook

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/dev-journal/: SKILL.md
data/seed/: README.md  emotions.csv  nsfw_tags.csv  themes.csv
docs/00_briefing/: brief.md  product.md
docs/00_briefing/inspirations/: vision.md
docs/01_building/: architecture.md  database.md  decisions.md  ingestion.md  learnings.md  references.md  sessions.md
docs/02_fixing/: bugs.md
docs/03_planning/: improvements.md
src/lifebook/: __init__.py
src/lifebook/api/: __init__.py
src/lifebook/db/: __init__.py  build_db.py  schema.sql  seed_config.py  seed_labels.py
src/lifebook/export/: __init__.py
src/lifebook/ingest/: __init__.py  dates.py  docx.py  notion.py  prose.py
src/lifebook/nlp/: __init__.py
src/lifebook/stats/: __init__.py
tests/: test_db_foundation.py  test_ingest.py
