[project]
name = "lifebook"
version = "0.1.0"
description = "Lifebook, a durable autobiographical system. The Python package is the single writer of life.db (SQLite), the source of truth."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lifebook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
